--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,11 @@
-import com.moowork.gradle.node.task.NodeTask
-
 group 'StockNNBot'
 version '1.0'
 
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: "com.moowork.node"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
-
-buildscript {
-    repositories {
-        mavenCentral()
-        jcenter()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.3.RELEASE")
-        classpath 'com.moowork.gradle:gradle-node-plugin:0.12'
-
-    }
-}
 
 jar {
     baseName = 'gs-serving-web-content'
@@ -31,7 +15,6 @@ jar {
 allprojects {
 
     apply plugin: 'java'
-    apply plugin: 'org.springframework.boot'
 
     repositories {
         mavenLocal()
@@ -99,7 +82,16 @@ project(":Model") {
         // https://mvnrepository.com/artifact/com.yahoofinance-api/YahooFinanceAPI
         compile group: 'com.yahoofinance-api', name: 'YahooFinanceAPI', version: '3.5.0'
     }
+
+    sourceSets {
+        main {
+            java {
+                exclude '**//*commandsUnused*//**'
+            }
+        }
+    }
 }
+/*
 
 project(":ViewControl") {
     dependencies {
@@ -108,29 +100,40 @@ project(":ViewControl") {
         compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 
         compile("org.springframework.boot:spring-boot-devtools")
+
+        compile("org.springframework.boot:spring-boot-starter-data-jpa")
+
+        compile("org.springframework.boot:spring-boot-starter-data-rest")
+        // https://mvnrepository.com/artifact/org.projectlombok/lombok
+        compile group: 'org.projectlombok', name: 'lombok', version: '1.16.12'
+
+        // https://mvnrepository.com/artifact/com.h2database/h2
+        compile group: 'com.h2database', name: 'h2', version: '1.4.193'
+
     }
 
-    /////FRONTEND SHIT/////
 
-    node {
-        version = '5.8.0'
-        npmVersion = '3.8.0'
-        download = true
-        // distBaseUrl = Custom artifactory location here.
-    }
 
-    task webpack(type: NodeTask, dependsOn: 'npmInstall') {
-        def osName = System.getProperty("os.name").toLowerCase();
-        if (osName.contains("windows")) {
-            script = project.file('node_modules/webpack/bin/webpack.js')
-        } else {
-            script = project.file('node_modules/.bin/webpack')
-        }
-    }
+}
+/////FRONTEND SHIT/////
 
-    processResources.dependsOn 'webpack'
-
-    clean.delete << file('node_modules')
-    clean.delete << file('src/main/webapp/dist')
+node {
+    version = '5.8.0'
+    npmVersion = '3.8.0'
+    download = true
+    // distBaseUrl = Custom artifactory location here.
 }
 
+task webpack(type: NodeTask, dependsOn: 'npmInstall') {
+    def osName = System.getProperty("os.name").toLowerCase();
+    if (osName.contains("windows")) {
+        script = project.file('node_modules/webpack/bin/webpack.js')
+    } else {
+        script = project.file('node_modules/.bin/webpack')
+    }
+}
+
+processResources.dependsOn 'webpack'
+
+clean.delete << file('node_modules')
+clean.delete << file('src/main/webapp/dist')*/
