--- a/Control/src/main/resources/application.properties
+++ b/Control/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.data.rest.base-path=/data
 
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 #spring.datasource.url=jdbc:mysql://localhost/stocks?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false&useServerPrepStmts=false&rewriteBatchedStatements=true
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/stocks
-spring.datasource.username=system
-spring.datasource.password=Root1234
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:postgresql://localhost/stocks
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Keep the connection alive if idle for a long time
 spring.datasource.testWhileIdle = true
@@ -14,12 +15,12 @@ spring.jpa.show-sql=true
 log4j.logger.org.hibernate.SQL=debug
 log4j.logger.org.hibernate.type.descriptor.sql=trace
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto = create
 
 spring.jpa.generate-ddl=true
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57InnoDBDialect
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle12cDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.properties.hibernate.jdbc.batch_size=100
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
