--- a/Control/src/main/resources/application.properties
+++ b/Control/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.rest.base-path=/data
 
-spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 #spring.datasource.url=jdbc:mysql://localhost/stocks?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false&useServerPrepStmts=false&rewriteBatchedStatements=true
 spring.datasource.url=jdbc:postgresql://localhost/stocks
 spring.datasource.username=postgres
@@ -12,10 +12,10 @@ spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 # Show or not log for each sql query
 spring.jpa.show-sql=true
-log4j.logger.org.hibernate.SQL=debug
-log4j.logger.org.hibernate.type.descriptor.sql=trace
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.generate-ddl=true
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
