--- a/Control/src/main/resources/application.properties
+++ b/Control/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.data.rest.base-path=/data
+server.address=192.168.1.3
 
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 #spring.datasource.url=jdbc:mysql://localhost/stocks?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false&useServerPrepStmts=false&rewriteBatchedStatements=true
