--- a/Model/build.gradle
+++ b/Model/build.gradle
@@ -13,6 +13,8 @@ repositories {
 
 dependencies {
 
+    compile fileTree(dir: 'libs', include: '*.jar')
+    
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     // https://mvnrepository.com/artifact/org.jsoup/jsoup
