--- a/Model/build.gradle
+++ b/Model/build.gradle
@@ -62,8 +62,7 @@ dependencies {
 sourceSets {
     main {
         java {
-            exclude '**//*commandsUnused*//**'
-            exclude '**//*view*//**'
+            exclude '**//*excluded*//**'
         }
     }
 }
