Added STOMP over websocket support

--- a/Control/package.json
+++ b/Control/package.json
@@ -45,6 +45,10 @@
     "highcharts":"latest",
     "highstock-release":"latest",
     "cytoscape": "latest",
+
+    "sockjs-client": "latest",
+    "webstomp-client":"latest",
+
     "webpack-dev-server": "latest",
     "webpack": "latest"
   },
