--- a/Control/src/main/resources/application.yml
+++ b/Control/src/main/resources/application.yml
@@ -51,5 +51,5 @@ spring:
                 order_updates: true
                 temp:
                     use_jdbc_metadata_defaults: false
-        show-sql: true
+        show-sql: false
 
