--- a/Model/build.gradle
+++ b/Model/build.gradle
@@ -1,4 +1,4 @@
-group 'StockNNBot'
+group 'DeepStocks'
 version '1.0'
 
 apply plugin: 'java'
@@ -14,8 +14,6 @@ repositories {
 dependencies {
 
     compile fileTree(dir: 'libs', include: '*.jar')
-    
-    testCompile group: 'junit', name: 'junit', version: '4.12'
 
     // https://mvnrepository.com/artifact/org.jsoup/jsoup
     compile group: 'org.jsoup', name: 'jsoup', version: '1.10.1'
@@ -27,7 +25,7 @@ dependencies {
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
 
     // https://mvnrepository.com/artifact/io.reactivex/rxjava
-    compile group: 'io.reactivex', name: 'rxjava', version: '1.2.5'
+    //compile group: 'io.reactivex', name: 'rxjava', version: '1.2.5'
 
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
@@ -57,6 +55,8 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.yahoofinance-api/YahooFinanceAPI
     compile group: 'com.yahoofinance-api', name: 'YahooFinanceAPI', version: '3.5.0'
+
+    compile 'com.github.PartTimeHackerman:ProxyScraper:no-PhantomJS-SNAPSHOT'
 
 }
 
