--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: java
 jdk:
   - oraclejdk8
 sudo: enabled
-before_script:
+before_install:
+ - chmod +x gradlew
+ before_script:
  - chmod +x gradlew
