--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,7 @@ sudo: enabled
 before_install:
  - chmod +x gradlew
  - chmod +x gradle/wrapper/gradle-wrapper.jar
+ script:
+ - bundle exec ./gradlew build
+
 
