--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ before_install:
  - chmod +x gradlew
  - chmod +x gradle/wrapper/gradle-wrapper.jar
 script:
- - ./gradlew clean build -i --continue
+ - ./gradlew build -x test
 
