--- a/Control/package.json
+++ b/Control/package.json
@@ -44,10 +44,13 @@
     "sockjs-client": "latest",
     "webstomp-client": "latest",
     "webpack-dev-server": "latest",
-    "webpack": "latest"
+    "webpack": "latest",
+    "graceful-fs": "latest",
+    "npmlog": "latest"
   },
   "dependencies": {
-    "rest": "latest",
-    "require": "latest"
+    "npm": "^5.3.0",
+    "require": "latest",
+    "rest": "latest"
   }
 }
