--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ subprojects {
     apply plugin: 'idea'
     apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
+    //apply plugin: "org.junit.platform.gradle.plugin"
 
     repositories {
         mavenCentral()
@@ -63,14 +64,14 @@ subprojects {
 
     ext['hibernate.version'] = '5.2.9.Final'
     dependencies {
-
-        testCompile("org.junit.jupiter:junit-jupiter-api:5.0.0-M3")
-        testCompile("org.junit.platform:junit-platform-runner:1.0.0-M3")
-        testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0-M3")
-        //testCompile 'org.junit.platform:junit-platform-launcher:1.+'
-        //testCompile 'org.junit.jupiter:junit-jupiter-api:5.+'
-        //testCompile 'org.junit.vintage:junit-vintage-engine:4.+'
+        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.0.0-M5'
+        testCompile group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.0.0-M5'
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+        testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.0.0-M5'
         testCompile 'org.mockito:mockito-core:2.+'
+        testCompile group: 'org.junit.platform', name: 'junit-platform-console', version: '1.0.0-M5'
+        //classpath "org.junit.platform:junit-platform-gradle-plugin:1.0.0-M5"
+
         ////////////////////////// SPRING //////////////////////////
 
         // https://mvnrepository.com/artifact/org.postgresql/postgresql
@@ -139,6 +140,8 @@ subprojects {
         compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.0.9'
 
         compile 'com.github.PartTimeHackerman:Vaer:-SNAPSHOT'
+
+        compile('com.rollbar:rollbar:0.5.3')
 
     }
 }
