--- a/Model/build.gradle
+++ b/Model/build.gradle
@@ -11,6 +11,10 @@ repositories {
     jcenter()
 }
 
+bootRepackage {
+    classifier = "full"
+}
+
 dependencies {
 
     compile fileTree(dir: 'libs', include: '*.jar')
@@ -19,7 +23,14 @@ dependencies {
     compile group: 'org.jsoup', name: 'jsoup', version: '1.10.1'
 
     // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.6.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.2'
+
+    // https://mvnrepository.com/artifact/log4j/log4j
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+
+    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8.2'
+
 
     // https://mvnrepository.com/artifact/commons-collections/commons-collections
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
